[package]
name = "clickable_img"
version = "0.1.13"
edition = "2021"
rust-version = "1.65"
description = "Click aware image for egui."
license = "Apache-2.0"
documentation = "https://github.com/ruimo/clickable_img"
homepage = "https://github.com/ruimo/clickable_img"
repository = "https://github.com/ruimo/clickable_img"

[dependencies]
egui = { version = "0.31.1", features = [] }
bit-set = "^0"
usvg = "^0"
resvg = "^0"
tiny-skia = "^0"
local_file_cache = "^0"
sha = "^1"
