[package]
name = "clickable_img"
version = "0.1.17"
edition = "2021"
rust-version = "1.65"
description = "Click aware image for egui."
license = "Apache-2.0"
documentation = "https://github.com/ruimo/clickable_img"
homepage = "https://github.com/ruimo/clickable_img"
repository = "https://github.com/ruimo/clickable_img"

[dependencies]
egui = { version = "0.34.0", features = [] }
#egui = { path = "../egui-0.34.0/crates/egui", features = [] }
epaint = { version = "0.34.0" }
#epaint = { path = "../egui-0.34.0/crates/epaint" }
emath = { version = "0.34.0" }
#emath = { path = "../egui-0.34.0/crates/emath" }
bit-set = "^0"
usvg = "^0"
resvg = "^0"
tiny-skia = "^0"
local_file_cache = "^0"
sha = "^1"
